--- a/client/views/session.html
+++ b/client/views/session.html
@@ -1,8 +1,9 @@
 <div class="disabled-container" ng-show='isDisabled'>
-  <div class="disabled-copy-container">
-    <p>DISABLED</p>
+  <div class='disabled-copy-container'>
+    <p class="disabled-copy">please resize your browser</p>
   </div>
 </div>
+
 <div ng-show='showPermission' class='permission-overlay'>
   <p class='record-permission'> {{ requestingUser }} would like to record this session</p>
   <p class='is-ok'>Is this ok?</p>
