--- a/client/styles/disabled.css
+++ b/client/styles/disabled.css
@@ -9,7 +9,6 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  display: none;
 }
 
 .disabled-copy-container {
@@ -18,12 +17,14 @@
   right: 0;
   top: 0;
   bottom: 0;
-  width: 600px;
-  height: 400px;
+  width: auto;
+  height: 50px;
   margin: auto;
-  border: 1px solid white;
+  white-space: nowrap;
 }
 
 .disabled-copy {
+  font-size: 16px;
   position: relative;
+  color: white;
 }
